--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ ion-icon {
 /* Card */
 .card {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
   margin: 0 20px;
 }
@@ -158,15 +158,11 @@ ion-icon {
   padding: 50px 20px;
   background-color: #ccc;
   margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  /* Nếu dùng space-arround thì khi wrap xuống dòng sẽ ở
-  trung tâm, không cần dùng thêm @media quere */
-  /* justify-content: space-between; */
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  /* gap: 20px; */
   align-items: center;
-  gap: 20px;
-  flex-grow: 0;
+  justify-items: center;
 }
 
 .footer-text {
@@ -178,6 +174,7 @@ ion-icon {
   display: flex;
   align-items: center;
   gap: 20px;
+  justify-content: center;
 }
 
 .footer-link a:link,
@@ -193,7 +190,7 @@ ion-icon {
     margin-left: unset;
   }
 }
-
+/* 
 @media screen and (min-width: 768px) {
   .heading {
     top: 50%;
@@ -229,4 +226,4 @@ ion-icon {
   .card {
     grid-template-columns: repeat(4, 1fr);
   }
-}
+} */
